[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mortgage-broker-intelligence"
version = "0.1.0"
description = "HMDA-first seed database builder for ranking mortgage companies by state"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "streamlit",
  "pandas",
  "requests",
  "python-dotenv",
  "numpy",
]
